--- a/src/main/resources/com/example/demo4/scene2.fxml
+++ b/src/main/resources/com/example/demo4/scene2.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="663.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="663.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Scene2Controller">
    <children>
-      <Button fx:id="eduPrevious" layoutX="480.0" layoutY="494.0" mnemonicParsing="false" onAction="#switchToScene1" text="Previous Page" />
-      <Button layoutX="580.0" layoutY="494.0" mnemonicParsing="false" text="Next Page" />
+      <Button fx:id="scene2Prev" layoutX="480.0" layoutY="494.0" mnemonicParsing="false" onAction="#switchToScene1" text="Previous Page" />
+      <Button fx:id="submitApplication" layoutX="580.0" layoutY="494.0" mnemonicParsing="false" onAction="#Submit" text="Submit" />
       <Label layoutX="14.0" layoutY="18.0" text="Queens College Non-Degree Application Form">
          <font>
             <Font name="System Bold" size="21.0" />
@@ -28,37 +28,37 @@
       <AnchorPane layoutX="3.0" layoutY="89.0" prefHeight="123.0" prefWidth="655.0">
          <children>
             <Label layoutX="14.0" layoutY="13.0" text="Did you receive a regular high school diploma? *" />
-            <ComboBox layoutX="304.0" layoutY="9.0" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
+            <ComboBox fx:id="highSchoolDip" layoutX="304.0" layoutY="9.0" onMouseClicked="#highSchoolDipClick" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
             <Label layoutX="14.0" layoutY="44.0" text="Name of high school" />
-            <TextField layoutX="143.0" layoutY="40.0" prefHeight="25.0" prefWidth="257.0" />
+            <TextField fx:id="highSchoolName" layoutX="143.0" layoutY="40.0" prefHeight="25.0" prefWidth="257.0" />
             <Label layoutX="14.0" layoutY="80.0" text="Date of high school graduation" />
-            <DatePicker layoutX="185.0" layoutY="76.0" />
+            <DatePicker fx:id="HSGradDate" layoutX="185.0" layoutY="76.0" />
             <Separator layoutX="-3.0" layoutY="119.0" prefHeight="6.0" prefWidth="655.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="3.0" layoutY="212.0" prefHeight="87.0" prefWidth="663.0">
          <children>
             <Label layoutX="14.0" layoutY="5.0" prefHeight="68.0" prefWidth="165.0" text="If you do not have a regular high school diploma, did you receive an equivalency diploma?" wrapText="true" />
-            <ComboBox layoutX="219.0" layoutY="10.0" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
+            <ComboBox fx:id="EquivalencyDip" layoutX="219.0" layoutY="10.0" onMouseClicked="#equivalencyDipSelect" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
             <Separator layoutX="-3.0" layoutY="82.0" prefHeight="0.0" prefWidth="663.0" />
             <Label layoutX="356.0" layoutY="14.0" text=" Date of Diploma" />
-            <DatePicker layoutX="462.0" layoutY="10.0" />
+            <DatePicker fx:id="equivalencyDipDate" layoutX="462.0" layoutY="10.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="-1.0" layoutY="295.0" prefHeight="190.0" prefWidth="663.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text=" Have you attended other educational institutions beyond high school?*" />
-            <ComboBox layoutX="433.0" layoutY="10.0" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
+            <ComboBox fx:id="EDUBeyondHS" layoutX="433.0" layoutY="10.0" onMouseClicked="#EDUBeyondHSClick" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
             <Label layoutX="14.0" layoutY="45.0" text="University name" />
-            <TextField layoutX="108.0" layoutY="42.0" prefHeight="25.0" prefWidth="257.0" />
+            <TextField fx:id="universityName" layoutX="108.0" layoutY="42.0" prefHeight="25.0" prefWidth="257.0" />
             <Label layoutX="14.0" layoutY="77.0" text="What is the last semester of attendance" />
-            <DatePicker layoutX="237.0" layoutY="73.0" />
+            <DatePicker fx:id="lastSemesterDate" layoutX="237.0" layoutY="73.0" />
             <Label layoutX="14.0" layoutY="113.0" text="Date of Graduation" />
-            <DatePicker layoutX="127.0" layoutY="109.0" />
+            <DatePicker fx:id="dateOfGraduation" layoutX="127.0" layoutY="109.0" />
             <Label layoutX="14.0" layoutY="150.0" text="Have you ever attended a CUNY college?*" />
-            <ComboBox layoutX="248.0" layoutY="146.0" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
+            <ComboBox fx:id="attendCUNY" layoutX="248.0" layoutY="146.0" onMouseClicked="#attendCUNYClick" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
             <Label layoutX="7.0" layoutY="181.0" text="Have you ever taken any course at Queens College before?*" />
-            <ComboBox layoutX="349.0" layoutY="172.0" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
+            <ComboBox fx:id="attendQC" layoutX="349.0" layoutY="172.0" onMouseClicked="#attendQCClick" prefHeight="25.0" prefWidth="84.0" promptText="Select" />
          </children>
       </AnchorPane>
    </children>
