--- a/src/main/resources/com/example/demo4/scene1.fxml
+++ b/src/main/resources/com/example/demo4/scene1.fxml
@@ -51,7 +51,7 @@
             <TextField fx:id="addZip" layoutX="417.0" layoutY="30.0" prefHeight="25.0" prefWidth="116.0" />
          </children>
       </AnchorPane>
-      <Label layoutX="14.0" layoutY="18.0" text="Queens College Non-Degree Application Form">
+      <Label layoutX="5.0" layoutY="-2.0" text="Queens College Non-Degree Application Form">
          <font>
             <Font name="System Bold" size="21.0" />
          </font></Label>
@@ -91,6 +91,8 @@
             <CheckBox fx:id="phoneNumAsCellPhone" layoutX="294.0" layoutY="21.0" mnemonicParsing="false" onAction="#copyPhoneNum" text="Check here if Phone Number is same as Cell phone number" />
          </children>
       </AnchorPane>
+      <Label layoutX="10.0" layoutY="29.0" text="UID:" />
+      <Label fx:id="UID" layoutX="46.0" layoutY="29.0" text=" " />
 
 
    </children>
