--- a/src/main/resources/com/example/QCApplication_BuilderPattern/scene1.fxml
+++ b/src/main/resources/com/example/QCApplication_BuilderPattern/scene1.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="663.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo4.Scene1Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="663.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.QCApplication_BuilderPattern.Scene1Controller">
    <children>
       <Label layoutX="14.0" layoutY="67.0" prefHeight="27.0" prefWidth="195.0" text="Student Information" textAlignment="CENTER">
          <font>
